// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removing 1`] = `
"/ (directory)
└── a (directory)
    └── c (file)"
`;

exports[`removing 2`] = `
"/ (directory)
└── a (directory)"
`;

exports[`removing 3`] = `"/ (directory)"`;

exports[`writing 1`] = `"/ (directory)"`;

exports[`writing 2`] = `
"/ (directory)
└── a (directory)"
`;

exports[`writing 3`] = `
"/ (directory)
├── a (directory)
└── b (directory)"
`;

exports[`writing 4`] = `
"/ (directory)
├── a (directory)
└── c (file)"
`;
